--- a/wiki/AccessOverview.wiki
+++ b/wiki/AccessOverview.wiki
@@ -11,9 +11,9 @@ This hardware/software project was designed by non-professionals and should be r
 ==Project Notes==
 In order to implement this project at your space, the following items are recommended.
 
-  * The latest Open Access Control hardware. You can have the board fabricated or purchase one from the 23b Shop. All of the parts listed in the Bill of Materials (available in the downloads folder) are available from Digikey, Mouser, and other common sources.
+  * The latest [http://code.google.com/p/open-access-control/downloads/list Open Access Control hardware]. You can have the board fabricated or purchase one from the 23b Shop. All of the parts listed in the Bill of Materials (available in the downloads folder) are available from Digikey, Mouser, and other common sources.
 
-  * An Arduino or compatible micro controller and the latest Arduino software. We have tested with the Duemillanove, Uno and FreeDuino. You will need one with an Atmega 328 for this project.
+  * An [http://arduino.cc Arduino] or compatible micro controller and the latest Arduino software. We have tested with the Duemillanove, Uno and FreeDuino. You will need one with an Atmega 328 for this project.
 
   * A power supply suitable for the peak current load of all of your door hardware as well as the access control itself. We use a 5A, adjustable switched power supply and the UPS circuit. You will need a PS that can be adjusted up to 15V if you wish to use the UPS circuit. Fully operational, our system draws about 600ma with a door magnet, the access system, battery float charging, several alarm sensors, and an Arduino Ethernet module.
 
