--- a/wiki/AccessOverview.wiki
+++ b/wiki/AccessOverview.wiki
@@ -11,7 +11,7 @@ This hardware/software project was designed by non-professionals and should be r
 ==Project Notes==
 In order to implement this project at your space, the following items are recommended.
 
-  * The latest [http://code.google.com/p/open-access-control/downloads/list Open Access Control hardware]. You can have the board fabricated or purchase one from the 23b Shop. All of the parts listed in the Bill of Materials (available in the downloads folder) are available from Digikey, Mouser, and other common sources.
+  * The latest [http://code.google.com/p/open-access-control/downloads/list Open Access Control hardware]. You can have the board fabricated or purchase one from the [http://shop.23b.org 23b Shop]. All of the parts listed in the Bill of Materials (available in the downloads folder) are available from [http://www.digikey.com Digikey], [http://www.mouser.com Mouser], and other common sources.
 
   * An [http://arduino.cc Arduino] or compatible micro controller and the latest Arduino software. We have tested with the Duemillanove, Uno and FreeDuino. You will need one with an Atmega 328 for this project.
 
