--- a/wiki/AccessOverview.wiki
+++ b/wiki/AccessOverview.wiki
@@ -23,8 +23,15 @@ In order to implement this project at your space, the following items are recomm
 
   * Door hardware, such as an [http://adamsrite.com/media/pdf/v2/ES-10_7130-7131.pdf electric strike], mortise-style electric latch or [http://shop.ebay.com/i.html?_nkw=magnetic+door+lock&_sacat=0&_odkw=door+magnet+lock door magnet]. [http://hubpages.com/hub/Electrifying-an-Aluminum-Store-Front-Opening Glass front shop doors] are a bit more expensive to electrify but there is [http://www.adamsrite.com/media/pdf/v2/sw32_4593.pdf drop-in] [http://www.adamsrite.com/NewFiles/e-latch.pdf hardware] to do it.
 
-A low-budget way to electrify a standard residential door is to hack a [http://www.schlage.com/ Schlage] or similar keyless door lock that uses batteries and a PIN code.
+  A low-budget way to electrify a standard residential door is to hack a [http://www.schlage.com/ Schlage] or similar keyless door lock that uses batteries and a PIN code.
 
   * RFID, PIN pads or other access readers. Look for [http://en.wikipedia.org/wiki/Wiegand_interface Wiegand] interface door readers. The HID brand is the most widely deployed for buildings, but is proprietary and expensive. The open-standards alternative is EM4100, which is available in abundance on [http://shop.ebay.com/?_from=R40&_trksid=p5197.m570.l1313&_nkw=EM4100&_sacat=See-All-Categories eBay] or from Internet shops. Wiegand stuff is usually good for up to 500 feet of cable run  if you use shielded cable. You could also use RS232-based readers, but we have not tested this.
 
- 
+----
+==Safety Considerations==
+When planning for your installation, you need to be aware of fire codes and safety issues. Our experience was basically the following:
+  * You cannot lock the exit doors from people inside. Any door in the exit path that your system controls must have a mechanical device to allow exit regardless of the electronics state. If you can't do that (such as with a door magnet) then the code typically requires that your system have both a request-to-exit motion sensor and a mechanical button near the door which interrupts power and allows exit.
+
+  * If you are installing access hardware on a fire-rated door, you cannot make any alterations to the door and you may need to buy specific hardware. Basically, these doors are solid doors that are rated to withstand a fire for a certain number of minutes. Drilling holes or removing material from them voids the rating and puts you on the hook for replacing the door. Look for a fire-rating sticker somewhere on the frame or hinges, and talk to the building owner if in doubt.
+
+This [http://www.securitymagazine.com/articles/requirements-for-card-to-exit-1 article] explains more.
