--- a/wiki/AccessOverview.wiki
+++ b/wiki/AccessOverview.wiki
@@ -21,7 +21,7 @@ In order to implement this project at your space, the following items are recomm
 
   * Alarm sensors such as door magnets, motion detectors, glass-break sensors, etc if using the alarm or door chime features
 
-  * Door hardware, such as an [http://adamsrite.com/media/pdf/v2/ES-10_7130-7131.pdf electric strike], mortise-style electric latch or [http://shop.ebay.com/i.html?_nkw=magnetic+door+lock&_sacat=0&_odkw=door+magnet+lock door magnet]. [http://hubpages.com/hub/Electrifying-an-Aluminum-Store-Front-Opening Glass front shop doors] are a bit more expensive to electrify but there is [http://www.adamsrite.com/media/pdf/v2/sw32_4593.pdf drop-in] [http://www.adamsrite.com/NewFiles/e-latch.pdf hardware] to do it.
+  * Door hardware, such as an [http://shop.ebay.com/?_from=R40&_trksid=p5197.m570.l1313&_nkw=electric+strike electric strike], mortise-style electric latch or [http://shop.ebay.com/i.html?_nkw=magnetic+door+lock&_sacat=0&_odkw=door+magnet+lock door magnet]. [http://hubpages.com/hub/Electrifying-an-Aluminum-Store-Front-Opening Glass front shop doors] are a bit more expensive to electrify but there is [http://www.adamsrite.com/media/pdf/v2/sw32_4593.pdf drop-in] [http://www.adamsrite.com/NewFiles/e-latch.pdf hardware] to do it.
 
   A low-budget way to electrify a standard residential door is to hack a [http://www.schlage.com/ Schlage] or similar keyless door lock that uses batteries and a PIN code.
 
