--- a/wiki/AccessOverview.wiki
+++ b/wiki/AccessOverview.wiki
@@ -17,9 +17,9 @@ In order to implement this project at your space, the following items are recomm
 
   * A power supply suitable for the peak current load of all of your door hardware as well as the access control itself. We use a 5A, switching power supply and the UPS circuit. You will need a PS that can be adjusted up to 15V if you wish to use the UPS circuit. Fully operational, our system draws about 600ma with a door magnet, the access system, battery float charging, several alarm sensors, and an Arduino Ethernet module.
 
-  * Some type of enclosure. Suggestions would be to either look for an old alarm panel to guy (call an installer and ask for the old ones?) or a NEMA-format electrical box. These are available from electrician's supply shops for a reasonable price.
+  * Some type of enclosure. Suggestions would be to either look for an old alarm panel to gut (call an installer and ask for the old ones) or a NEMA-format electrical box. These are available from electrical supply shops for a reasonable price.
 
-  * Alarm sensors such as door magnets, motion detectors, glass-break sensors, etc if using the alarm or door chime features
+  * Alarm sensors such as door magnets, motion detectors, glass-break sensors, etc if using the alarm or door chime feature set.
 
   * Door hardware, such as an [http://shop.ebay.com/?_from=R40&_trksid=p5197.m570.l1313&_nkw=electric+strike electric strike], mortise-style electric latch or [http://shop.ebay.com/i.html?_nkw=magnetic+door+lock&_sacat=0&_odkw=door+magnet+lock door magnet]. [http://hubpages.com/hub/Electrifying-an-Aluminum-Store-Front-Opening Glass front shop doors] are a bit more expensive to electrify but there is [http://www.adamsrite.com/media/pdf/v2/sw32_4593.pdf drop-in] [http://www.adamsrite.com/NewFiles/e-latch.pdf hardware] to do it.
 
