--- a/wiki/SoftwareTips.wiki
+++ b/wiki/SoftwareTips.wiki
@@ -43,4 +43,7 @@ Once you have this functionalist working, you can log into the console again and
   * Several usermasks (security levels) are defined in the code. A default of 254 will work for getting started.
   * You can store up to 200 users in eeprom on the Arduino. Users are numbered 0..199.
   * It's recommended that you create a spreadsheet of your users, as the software will replace the tage info with asteriks unless debugging is enabled.
-  * You can customize the reader logic, keypad commands and alarm functions as needed. Samples are included in the code. Be sure to make frequent backups of the code!
+==Customization==
+  * You can customize the reader logic, keypad commands, timeout values and alarm functions as needed. Samples are included in the code. Be sure to make frequent backups.
+  * There are about 40 bytes of unused eeprom space available for custom features.
+  * Please consider contributing anything that you think is useful back to the project.
