--- a/wiki/Welcome.wiki
+++ b/wiki/Welcome.wiki
@@ -8,3 +8,7 @@ This wiki contains documentation to help with building, customizing, testing and
 Contents:
   * [AccessOverview Hardware Installation and Wiring tips]
   * [SoftwareTips Software Installation and Customization]
+
+----
+Open Access Control by [http://shop.23b.org 23b Shop] is licensed under a Creative Commons Attribution 3.0 Unported License.
+Based on a work at [http://code.google.com code.google.com].
