Edited wiki page Welcome through web user interface.

--- a/wiki/Welcome.wiki
+++ b/wiki/Welcome.wiki
@@ -6,7 +6,7 @@
 This wiki contains documentation to help with building, customizing, testing and deploying the Open Access system.
 
 Contents:
-  * [AccessOverview Hardware Installation and Wiring tips]
+  * [HardwareTips Hardware Installation and Wiring tips]
   * [SoftwareTips Software Installation and Customization]
 
 ----
