--- a/wiki/Welcome.wiki
+++ b/wiki/Welcome.wiki
@@ -10,6 +10,6 @@ Contents:
   * [SoftwareTips Software Installation and Customization]
 
 ----
-Open Access Control by [http://shop.23b.org 23b Shop] is licensed under a Creative Commons Attribution 3.0 Unported License.
+Open Access Control by [http://shop.23b.org 23b Shop] is licensed under a [http://creativecommons.org/licenses/by/3.0/Creative Commons Attribution 3.0 Unported License].
 
 Based on a work at [http://code.google.com code.google.com].
