--- a/wiki/SoftwareTips.wiki
+++ b/wiki/SoftwareTips.wiki
@@ -48,6 +48,6 @@ Once you have this functionalist working, you can log into the console again and
   * There are about 40 bytes of unused eeprom space available for custom features.
   * Please consider contributing anything that you think is useful back to the project.
 ----
-Open Access Control by [http://shop.23b.org 23b Shop] is licensed under a Creative Commons Attribution 3.0 Unported License.
+Open Access Control by [http://shop.23b.org 23b Shop] is licensed under a [http://creativecommons.org/licenses/by/3.0/Creative Commons Attribution 3.0 Unported License].
 
 Based on a work at [http://code.google.com code.google.com].
