--- a/wiki/HardwareTips.wiki
+++ b/wiki/HardwareTips.wiki
@@ -83,6 +83,22 @@ You'll need to run these scripts all time, so run them with the '&' option like 
 ~/script$log_access_alert.sh &
 }}}
 
+A fancier version that tails the the last 5 lines of the log so that you can get more information about what user logged in, etc:
+
+{{{
+#!/bin/bash
+tail -0f access_log.txt | egrep --line-buffered -i "authenticated" | while read
+line
+        do
+            rm message_tmp.txt
+            cp log_msg.txt message_tmp.txt
+            tail -5 access_log.txt >> message_tmp.txt
+            echo EOF >>message_tmp.txt
+            msmtp -t < message_tmp.txt
+        done
+
+}}}
+
 The "msmtp" package is a great way to send alerting messages out via SMTP without having to run a mail server locally. You can configure it to use gmail, Yahoo, etc or your own private SMTP server on another system.
 
 ----
