Edited wiki page BuildTips through web user interface.

--- a/wiki/BuildTips.wiki
+++ b/wiki/BuildTips.wiki
@@ -42,16 +42,37 @@ Install the screw terminals next, and lastly, install the PS2501 opto-isolator c
 5. The last section we will install is the logic system. Install the two 4.7k resistors near the real-time clock chip. Install the 0.1uF capacitor (not polarized) and then the 32Khz crystal. This crystal is delicate. Bend its leads down and solder, taking care not to heat it any more than necessary. Install the battery holder with notch
 according to diagram, install the DS1307 RTC socket and chip, and solder in the Arduino headers. Insert the battery (positive side up) and snap in your Arduino. Use the stand-offs and 4-40 screws provided to secure the Arduino.
 
-6. Download a copy of the open Access Control firmware from the address above. Unzip it, and install the libraries in your Arduino libraries directory. Compile and upload.  You may test the hardware by uncommenting the "hardwareTest(100)" function. Upload this code, open a serial monitor and wait. You should see a date come across, the relays should cycle, and the system should show the status of each input port (digital 1..4 and analog 1..4). 
+6. Download a copy of the open Access Control firmware from the address above. Unzip it, and install the libraries in your Arduino libraries directory. Compile and upload.  You may test the hardware by un-commenting the following line:
+{{{
+hardwareTest(100);                         // IO Pin testing routine(use to check your inputs with hi/lo +(5-12V) sources)
+                                           // Also checks relays
+}}}
 
-Short each of these terminals to +5V using a jumper and check that the reading changes from 0 to 1 (digital) or 0 to ~1000 (analog).  You may also uncomment the routine to set the current date time at next startup. Be sure to get rid of this once set.
+Upload this code, open a serial monitor and wait. You should see a date come across, the relays should cycle, and the system should show the status of each input port (digital 1..4 and analog 1..4). 
+
+Short each of these terminals to +5V using a jumper and check that the reading changes from 0 to 1 (digital) or 0 to ~1000 (analog).  You may also un-comment the routine to set the current date time at next startup. 
+{{{
+ds1307.setDateDs1307(0,56,19,1,3,4,11);         
+  /*  Sets the date/time (needed once at commissioning)
+   
+   byte second,        // 0-59
+   byte minute,        // 0-59
+   byte hour,          // 1-23
+   byte dayOfWeek,     // 1-7
+   byte dayOfMonth,    // 1-28/29/30/31
+   byte month,         // 1-12
+   byte year);          // 0-99
+   */
+}}}
+
+Be sure to change this once the time has been set.
 
 Congratulations, you're done!
 
 ----
 ==Notes==
 
-  * Version 2.00 and 2.10 of the hardware require that the LM-2575 regulator be installed with a mica insulator underneath the heatsink or mounting tab. Failing to install this part could result in a 5V short.
+  * Version 2.00 and 2.10 of the hardware require that the LM-2575 regulator be installed with a mica insulator underneath the heat sink or mounting tab. Failing to install this part could result in a 5V short.
   * All parts on the v2.10 and 2.11 layouts have been tested with an actual build. If detachable screw terminals such as the Phoenix 5mm Fixed Terminal Block parts are to be used. the diameter of the holes needs to be increased to at least .055".
   * The design can be adapted for 24V use. The following parts must be changed if a 24V supply voltage is to be used: 
     * 24V coil relays
