--- a/wiki/HelpUs.wiki
+++ b/wiki/HelpUs.wiki
@@ -11,7 +11,7 @@ If you find this project useful, you can help support it in the following ways:
   * Send us your code or hardware design improvements
   * Buy a kit from the [http://shop.23b.org 23B shop]
   * Send us hardware to test with. We are particularly looking for:
-    * Wiegand or RS232/RS422 RFID readers (Indala, Mifare, etc)
+    * Wiegand or RS232/RS422 RFID readers (Indala, Mifare,HID, etc)
     * Magnetic stripe readers
     * PIN pad and scramble pad hardware
     * RFID and other access tokens
